# renova

./: .env.example  .gitignore  AGENTS.md  README.md  TASK-COUNTERS.md  docker-compose.staging.yml  docker-compose.yml  env.staging.example  package-lock.json  package.json  tsconfig.json
backend/: .env.example  .env.production.example  .env.staging.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14ef20b1cf11_v14.py  (+37 more)
backend/app/: main.py
backend/tests/: conftest.py  helpers_flow.py  test_acceptance_canon.py  test_acceptance_policy.py  test_account_purge.py  test_archived_chat_unread_policy.py  test_automation_reminders.py  test_bank_confirm_w45.py  test_bank_import_parse.py  test_budget_sot_w45.py  test_budget_summary_hub.py  test_chat_acl_helper.py  test_chat_mark_read_contract.py  test_chat_mark_read_http.py  test_chat_read_after_visible.py  test_chat_unread_snapshot.py  test_closeout_customer_w61.py  test_co_budget_line.py  test_co_draft_document.py  test_commerceml_escape.py  test_contract_gate.py  test_contract_gate_golden_path.py  test_cross_domain_notify.py  test_demo_seed_w47.py  test_digest_lite.py  test_digest_weekly_api.py  test_document_media_acl.py  test_document_ocr.py  test_document_ocr_worker.py  test_e2e_flow.py  test_email_smtp_flag.py  test_env_schema.py  test_environment_guards.py  test_esign_providers.py  test_esign_webhook_parse.py  test_estimate_clear_proposal_w65.py  test_estimate_lock.py  test_estimate_lock_w57.py  test_estimate_proposal_required_w64.py  test_fns_receipt_verify.py  (+60 more)
e2e/: helpers.ts  (+8 more)
(+1277 files in other folders)
